исправлен баг, убрана лишняя библиотека

--- a/victorinaDrink/symptoms.html
+++ b/victorinaDrink/symptoms.html
@@ -4,7 +4,7 @@
     }
     </style>
 
-<h1>Чёрным цветом описаны нормальные симптомы похмелья. Красным &mdash; требующие вызова неотложки.</h1>
+<p><strong>Чёрным цветом описаны нормальные симптомы похмелья. Красным &mdash; требующие вызова неотложки.</strong></p>
 <div>
             <p>тревожность, бессонница, чувство вины (даже если ничего не натворил), плохое настроение, дисфория (ощущение несчастья, неудовольствия)</p>
             <p>внезапный страх смерти, нарушение ориентации в месте и времени, обмороки, зрительные и слуховые галлюцинации, приступы <strong>удушья</strong> с затруднённым выдохом, кашель с сухими протяжными хрипами</p>
